--- a/assets/style.css
+++ b/assets/style.css
@@ -3,11 +3,14 @@
 ========================= */
 body {
   font-family: 'Merriweather', serif;
-  background-color: #FFF8F0; /* scrollable content background */
+  background-image: url('assets/parchment.jpg'); /* make sure the filename is correct */
+  background-size: cover;       /* make image cover the whole page */
+  background-repeat: no-repeat;
+  background-attachment: fixed; /* keeps texture fixed while scrolling */
   color: #222222;
   line-height: 1.8;
   margin: 0;
-  padding-top: 110px; /* space for stacked fixed header */
+  padding-top: 110px; /* space for fixed header */
 }
 
 /* =========================
