--- a/assets/style.css
+++ b/assets/style.css
@@ -87,7 +87,7 @@ main {
   max-width: 750px;
   margin: 2rem auto;
   padding: 2rem 1.5rem;
-  background-image: url('floral-old-paper-or-parchment-900x702.webp');
+  background-image: url('parchment.jpg');
   background-repeat: repeat;
   background-size: auto;
   background-position: top center;
