--- a/assets/style.css
+++ b/assets/style.css
@@ -33,7 +33,7 @@ html {
   align-items: center;
   justify-content: center;
 
-  background-image: url('assets/ebony.jpg');
+  background-image: url('header.jpg');
   background-size: cover;       /* image fills header, cropped if needed */
   background-position: center;
   background-repeat: no-repeat;
@@ -91,7 +91,7 @@ main {
   max-width: 750px;
   margin: 2rem auto;
   padding: 2rem 1.5rem;
-  background-image: url('assets/parchment.jpg');
+  background-image: url('parchment.jpg');
   background-repeat: repeat;
   background-size: auto;
   background-position: top center;
