--- a/assets/style.css
+++ b/assets/style.css
@@ -33,7 +33,7 @@ html {
   align-items: center;
   justify-content: center;
 
-  background-image: url('header.jpg'); 
+  background-image: url('beautiful-artificial-flower.jpg'); 
   background-size: cover;       /* image fills header, cropped if needed */
   background-position: center;
   background-repeat: no-repeat;
