--- a/assets/style.css
+++ b/assets/style.css
@@ -164,7 +164,7 @@ footer a:hover {
 ========================= */
 
 @media (max-width: 600px) {
-site-header {
+.site-header {
     height: auto;
     padding: 1rem;
   }
