--- a/assets/style.css
+++ b/assets/style.css
@@ -29,6 +29,7 @@ html {
   width: 100%;
   height: var(--header-height);
   display: flex;
+  flex-direction: column; /* stack children vertically */
   align-items: center;
   justify-content: center;
 
