--- a/assets/style.css
+++ b/assets/style.css
@@ -115,7 +115,15 @@ ul li {
   margin-bottom: 1.5rem;
   border-radius: 8px;
 }
-
+.shortstory-item {
+  background-color: rgba(255,255,255,0.85);
+  border-left: 4px solid #B89B6D;
+  padding: 1rem 1.5rem;
+  margin-bottom: 1.5rem;
+  border-radius: 8px;
+  text-align: justify;
+  text-justify: inter-word;
+}
 .poem-item .meta, .shortstory-item .meta {
   font-size: 0.9rem;
   color: #555;
